Fully featured version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flag-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/projects/flag-game",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
